--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^22.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
@@ -22,6 +23,7 @@
     "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.2.2",
     "@supabase/supabase-js": "^2.49.4",
+    "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
     "fastify-plugin": "^5.0.1",
     "ioredis": "^5.6.0",
